[package]
name = "mdp"
version = "0.1.1"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { git = "https://github.com/clap-rs/clap.git" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"
