[package]
name = "mdp"
version = "0.1.6"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
toml = "0.5.8"
